Fri Apr 13 00:09:08 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Ok, rewrote the logic of the re-key and now it seems to work.
	  I tested it on high traffic with frequent re-keys without
	  problems.  Added hmac_receive (and renamed hmac to hmac_send)
	  in SilcClientConnection in lib/silcclient/client.h and
	  in SilcIDListData in silcd/idlist.h.  Also, removed the
	  SilcPacketParserContext's cipher and hmac fields as they are
	  not needed anymore and actually caused some problems when
	  the ciphers and hmac's changed underneath the packet parser.

Thu Apr 12 14:42:51 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* If re-key protocol is active then process the incoming packets
	  synchronously since we must assure that icoming packets encrypted
	  with the old key is processed before the new keys is set to
	  use.  This is true other packets than for REKEY packets.
	  Affected file silcd/server.c.  The same was done to client library
	  as well, affected file lib/silcclient/client.c.

Thu Apr 12 12:01:52 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Fixed bug in client and server to accept the force send if
	  the packet is send from silc_[server/client]_packet_process
	  function.  Otherwise the packets are never delivered, oops.

Wed Apr 11 22:10:15 EEST 2001  Pekka Riikonen <priikone@poseidon.pspt.fi>

	* Disable force sending of packets when REKEY protocol is active.
	  We must assure that no packet is sent directly when rekey is
	  performed.  All packets must be sent through packet queue.
	  Added macro SILC_SERVER_IS_REKEY to silcd/server.h and
	  SILC_CLIENT_IS_REKEY to lib/silcclient/client.h.  Affected
	  function is silc_[server/client]_packet_send_real to check
	  the situation.

	* Replaced the SIM paths from example config files to 
	  /usr/local/modules.  Also, make install creates now
	  /usr/local/silc/logs directory to hold all the SILC server
	  logs.
